--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-Hej hej
- hej
+<!DOCTYPE html>
+<html>
+<body>
+<div class = "center">
+<img src="logga.png" alt="logo" class="center">
+</div>
+</body>
+</html> 
