Fix button for phone??

--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@ body {font-family: "Lato", sans-serif}
     <audio id="sound1" src="sound/BrarsPublik.mp3" preload="auto"></audio>
     
     <!-- Audio button -->
-    <div>  
-        <button onclick="document.getElementById('sound1').play();" 
-        style="border: none; cursor: pointer; appearance: none; background-color: inherit; 
-        margin-left:auto; margin-right:auto; display: block">
-            <img src="images/logga_with_alpha.png">
+    <div style="width: 70%; margin-left:auto; margin-right:auto; display: block">
+        <button onclick="document.getElementById('sound1').play();" style="background-color: inherit; border: none; cursor: pointer; appearance: none; display: block; margin: 10px 0; padding: 10px; width: 100%;">
+            <img src="images/logga_with_alpha.png" style="width:100%; display: block; margin-left:auto; margin-right:auto">
         </button>
     </div>
+    <!-- <div>  
+        <button onclick="document.getElementById('sound1').play();" 
+        style="border: none; cursor: pointer; appearance: none; background-color: inherit; 
+         display: block">
+            <img src="images/logga_with_alpha.png" style="width: auto;">
+        </button>
+    </div> -->
 
     <!-- The Band Section -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
