Added some member pictures and descriptions.

--- a/index.html
+++ b/index.html
@@ -53,50 +53,121 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
         <h2 class="w3-wide">BRÄRS</h2>
         <p class="w3-opacity"><i>BRÄRS is ready to bugle. Are you?</i></p>
-        <p class="w3-justify">Get ready to hear your favorite songs played in 
+        <div class="w3-row w3-padding-32">
+            <p class="w3-justify">Get ready to hear your favorite songs played in 
             the style of a hundred man military brass band on steroids. Inspired 
             by the likes of MEUTE, Lucky Chops, and Uppsala kulturskola, seven local 
             brazzers are here to bring the new wave of brasspop to Linköping.
-            <div class="w3-row w3-padding-32">
-        <div class="w3-third">
-            <p>Guvenören</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
         </div>
-        <div class="w3-third">
-            <p>Doktorn</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/guvernoren.jpeg" class="w3-round" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Guvenören</p>
+                <p class="w3-justify">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigarrs or sax reeds, rumbling baritone noise is his signum.</p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Röde Baronen</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/rodebaronen.jpg" class="w3-round" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Röde Baronen</p>
+                <p class="w3-justify">This mad dog from the north has been released to feast upon whatever solos he can. Armed with his Martin double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.</p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Majoren</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/majoren.jpg" class="w3-round" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Majoren</p>
+                <p class="w3-justify">180cm<br>80kg<br>8cm</p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Kommandoran</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Doktorn</p>
+                <p class="w3-justify"></p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Direktörn</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Kommandoran</p>
+                <p class="w3-justify"></p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Pastorn</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Direktörn</p>
+                <p class="w3-justify"></p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Kaptenen</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Pastorn</p>
+                <p class="w3-justify"></p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Greven</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Kaptenen</p>
+                <p class="w3-justify"></p>
+            </div>
         </div>
-        <div class="w3-third">
-            <p>Maskinen</p>
-            <img src="images/member.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Greven</p>
+                <p class="w3-justify"></p>
+            </div>
+        </div>
+        <div class="w3-row">
+            <div class="w3-third">
+                <div style=" width: 250px; height: 250px; overflow: hidden;">
+                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
+                </div>
+            </div>
+            <div class="w3-twothirds">
+                <p class="w3-justify">Maskinen</p>
+                <p class="w3-justify"></p>
+            </div>
         </div>
         </div>
     </div>
