--- a/index.html
+++ b/index.html
@@ -59,114 +59,94 @@ body {font-family: "Lato", sans-serif}
             by the likes of MEUTE, Lucky Chops, and Uppsala kulturskola, seven local 
             brazzers are here to bring the new wave of brasspop to Linköping.
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/guvernoren.jpeg" class="w3-round" style="width:80%">
-                </div>
+                <h3 class="w3-center">Guvenören</h3>
+                <img src="images/guvernoren.jpeg" class="w3-round w3-center" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Guvenören</p>
-                <p class="w3-justify">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigarrs or sax reeds, rumbling baritone noise is his signum.</p>
+                <p class="w3-justify" style="padding: 40px">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigarrs or sax reeds, rumbling baritone noise is his signum.</p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/rodebaronen.jpg" class="w3-round" style="width:80%">
-                </div>
+                <h3 class="w3-center">Röde Baronen</h3>
+                <img src="images/rodebaronen.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Röde Baronen</p>
-                <p class="w3-justify">This mad dog from the north has been released to feast upon whatever solos he can. Armed with his Martin double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.</p>
+                <p class="w3-justify" style="padding: 40px">This mad dog from the north has been released to feast upon whatever solos he can. Armed with his Martin double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.</p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/majoren.jpg" class="w3-round" style="width:80%">
-                </div>
+                <h3>Majoren</h3>
+                <img src="images/majoren.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Majoren</p>
-                <p class="w3-justify">180cm<br>80kg<br>8cm</p>
+                <p class="w3-justify" style="padding: 40px">180cm<br>80kg<br>8cm</p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
-                </div>
+                <h3 class="w3-center">Doktorn</h3>
+                <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Doktorn</p>
-                <p class="w3-justify"></p>
+                <p class="w3-justify" style="padding: 40px"></p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
-                </div>
+                <h3 class="w3-center">Kommandoran</h3>
+                <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Kommandoran</p>
-                <p class="w3-justify"></p>
+                <p class="w3-justify" style="padding: 40px"></p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
-                </div>
+                <h3 class="w3-center">Direktörn</h3>
+                <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Direktörn</p>
-                <p class="w3-justify"></p>
+                <p class="w3-justify" style="padding: 40px"></p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
-                </div>
+                <h3 class="w3-center">Pastorn</h3>
+                <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Pastorn</p>
-                <p class="w3-justify"></p>
+                <p class="w3-justify" style="padding: 40px"></p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
-                </div>
+                <h3 class="w3-center">Kaptenen</h3>
+                <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Kaptenen</p>
-                <p class="w3-justify"></p>
+                <p class="w3-justify" style="padding: 40px"></p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
-                </div>
+                <h3 class="w3-center">Greven</h3>
+                <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Greven</p>
-                <p class="w3-justify"></p>
+                <p class="w3-justify" style="padding: 40px"></p>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-padding-16">
             <div class="w3-third">
-                <div style=" width: 250px; height: 250px; overflow: hidden;">
-                    <img src="images/member.png" class="w3-round w3-margin-bottom" style="width:80%">
-                </div>
+                <h3 class="w3-center">Maskinen</h3>
+                <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify">Maskinen</p>
-                <p class="w3-justify"></p>
+                <p class="w3-justify" style="padding: 40px"></p>
             </div>
         </div>
         </div>
