--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {font-family: "Lato", sans-serif}
                 <img src="images/guvernoren.jpeg" class="w3-round w3-center" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigarrs or sax reeds, rumbling baritone noise is his signum.</p>
+                <p class="w3-justify" style="padding: 40px">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
