Member updates and adding brars.css for easier mobile web development.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="brars.css">
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -56,97 +57,97 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-row w3-padding-32">
             <p class="w3-justify">Get ready to hear your favorite songs played in 
             the style of a hundred man military brass band on steroids. Inspired 
-            by the likes of MEUTE, Lucky Chops, and Uppsala kulturskola, seven local 
+            by the likes of MEUTE, Lucky Chops, and Uppsala kulturskola, these nine 
             brazzers are here to bring the new wave of brasspop to Linköping.
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Guvenören</h3>
-                <img src="images/guvernoren.jpeg" class="w3-round w3-center" style="width:80%">
+            <div class="w3-third w3-padding-16">
+                <img src="images/guvernoren.jpeg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.</p>
+                <h3 class="mobile-text">Guvernören</h3>
+                <p class="w3-justify">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Röde Baronen</h3>
+            <div class="w3-third w3-padding-16">
                 <img src="images/rodebaronen.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px">This mad dog from the north has been released to feast upon whatever solos he can. Armed with his Martin double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.</p>
+                <h3 class="mobile-text">Röde Baronen</h3>
+                <p class="w3-justify">This mad dog from the north has been released to feast upon whatever solos he can. Armed with his Martin double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3>Majoren</h3>
+            <div class="w3-third w3-padding-16">
                 <img src="images/majoren.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px">180cm<br>80kg<br>8cm</p>
+                <h3 class="mobile-text">Majoren</h3>
+                <p class="w3-justify">180cm. 80kg. 8cm</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Doktorn</h3>
-                <img src="images/member.png" class="w3-round" style="width:80%">
+            <div class="w3-third w3-padding-16">
+                <img src="images/doktorn.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px"></p>
+                <h3 class="mobile-text">Doktorn</h3>
+                <p class="w3-justify">Holder of the Guiness world record for the brownest tone ever played on a used rectoscope.</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Kommandoran</h3>
+            <div class="w3-third w3-padding-16">
                 <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px"></p>
+                <h3 class="mobile-text">Kommandoran</h3>
+                <p class="w3-justify"></p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Direktörn</h3>
+            <div class="w3-third w3-padding-16">
                 <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px"></p>
+                <h3 class="mobile-text">Direktörn</h3>
+                <p class="w3-justify"></p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Pastorn</h3>
+            <div class="w3-third w3-padding-16">
                 <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px"></p>
+                <h3 class="mobile-text">Pastorn</h3>
+                <p class="w3-justify"></p>
+            </div>
+        </div>
+        <!-- <div class="w3-row w3-padding-16">
+            <div class="w3-third w3-padding-16">
+                <img src="images/member.png" class="w3-round" style="width:80%">
+            </div>
+            <div class="w3-twothirds">
+                <h3 class="mobile-text">Kaptenen</h3>
+                <p class="w3-justify"></p>
+            </div>
+        </div> -->
+        <div class="w3-row w3-padding-16">
+            <div class="w3-third w3-padding-16">
+                <img src="images/member.png" class="w3-round" style="width:80%">
+            </div>
+            <div class="w3-twothirds">
+                <h3 class="mobile-text">Greven</h3>
+                <p class="w3-justify"></p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Kaptenen</h3>
-                <img src="images/member.png" class="w3-round" style="width:80%">
+            <div class="w3-third w3-padding-16">
+                <img src="images/maskinen.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px"></p>
-            </div>
-        </div>
-        <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Greven</h3>
-                <img src="images/member.png" class="w3-round" style="width:80%">
-            </div>
-            <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px"></p>
-            </div>
-        </div>
-        <div class="w3-row w3-padding-16">
-            <div class="w3-third">
-                <h3 class="w3-center">Maskinen</h3>
-                <img src="images/member.png" class="w3-round" style="width:80%">
-            </div>
-            <div class="w3-twothirds">
-                <p class="w3-justify" style="padding: 40px"></p>
+                <h3 class="mobile-text">Maskinen</h3>
+                <p class="w3-justify">This oil-hungry two-stroke machine drives the bands pace and middle-aged paranoia. If you smell the classic smell of gasoline, you've come to the wrong place, this machine only runs on malt-enriched fluid replacement.</p>
             </div>
         </div>
         </div>
