--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-row w3-padding-16">
             <div class="w3-third w3-padding-16">
-                <img src="images/member.png" class="w3-round" style="width:80%">
+                <img src="images/Pastorn.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Pastorn</h3>
-                <p class="w3-justify"></p>
+                <p class="w3-justify">A man of dubious morals. With his sermons he promiswrs the audience salvation, but beware, by the sweet sound from his tenor sax will lead you to eternal damnation.</p>
             </div>
         </div>
         <!-- <div class="w3-row w3-padding-16">
