--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body {font-family: "Lato", sans-serif}
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Pastorn</h3>
-                <p class="w3-justify">A man of dubious morals. With his sermons he promiswrs the audience salvation, but beware, by the sweet sound from his tenor sax will lead you to eternal damnation.</p>
+                <p class="w3-justify">A man of dubious morals. With his sermons he promises the audience salvation. But beware: with the sweet sound from his tenor sax he will lead you to eternal damnation.</p>
             </div>
         </div>
         <!-- <div class="w3-row w3-padding-16">
