--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {font-family: "Lato", sans-serif}
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Guvernören</h3>
-                <p class="w3-justify">This hairy bastard is the groups self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.</p>
+                <p class="w3-justify">This hairy bastard is the group's self-proclaimed, non-official leader with no power. Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
