--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ body {font-family: "Lato", sans-serif}
                 <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
-                <h3 class="mobile-text">Kommandoran</h3>
-                <p class="w3-justify"></p>
+                <h3 class="mobile-text">Kaptenen</h3>
+                <p class="w3-justify">Right back from the other side of several of the seven seas, slayer of the Bermuda triangle, bukis with the Kraken. He has one wooden limp, can you guess which?</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
@@ -111,7 +111,7 @@ body {font-family: "Lato", sans-serif}
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Direktörn</h3>
-                <p class="w3-justify"></p>
+                <p class="w3-justify">He works with his fingers every day, but never with his hands. As a self-proclaimed philantropist he steals from the poor and gives to the rich, often times himself. Wanna smell his glögg?</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
@@ -138,7 +138,7 @@ body {font-family: "Lato", sans-serif}
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Greven</h3>
-                <p class="w3-justify"></p>
+                <p class="w3-justify">You cannot count on this Count being a real cunt, because he cannot count himself</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
