--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {font-family: "Lato", sans-serif}
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Kaptenen</h3>
-                <p class="w3-justify">Right back from the other side of several of the seven seas, slayer of the Bermuda triangle, bukis with the Kraken. He has one wooden limp, can you guess which?</p>
+                <p class="w3-justify">Right back from the other side of several of the seven seas, slayer of the Bermuda triangle, bukis with the Kraken. He has one wooden limb, can you guess which?</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
@@ -111,7 +111,7 @@ body {font-family: "Lato", sans-serif}
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Direktörn</h3>
-                <p class="w3-justify">He works with his fingers every day, but never with his hands. As a self-proclaimed philantropist he steals from the poor and gives to the rich, often times himself. Wanna smell his glögg?</p>
+                <p class="w3-justify">He works with his fingers every day, but never with his hands. As a self proclaimed philantropist he steals from the poor and gives to the rich, oftentimes himself. Wanna smell his glögg?</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
@@ -123,22 +123,13 @@ body {font-family: "Lato", sans-serif}
                 <p class="w3-justify">A man of dubious morals. With his sermons he promises the audience salvation. But beware: with the sweet sound from his tenor sax he will lead you to eternal damnation.</p>
             </div>
         </div>
-        <!-- <div class="w3-row w3-padding-16">
-            <div class="w3-third w3-padding-16">
-                <img src="images/member.png" class="w3-round" style="width:80%">
-            </div>
-            <div class="w3-twothirds">
-                <h3 class="mobile-text">Kaptenen</h3>
-                <p class="w3-justify"></p>
-            </div>
-        </div> -->
         <div class="w3-row w3-padding-16">
             <div class="w3-third w3-padding-16">
                 <img src="images/member.png" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Greven</h3>
-                <p class="w3-justify">You cannot count on this Count being a real cunt, because he cannot count himself</p>
+                <p class="w3-justify">You cannot count on this Count being a real cunt, because he cannot count himself.</p>
             </div>
         </div>
         <div class="w3-row w3-padding-16">
