Replace png with jpg and compress images more for smaller file size

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-row w3-padding-16">
             <div class="w3-third w3-padding-16">
-                <img src="images/Pastorn.png" class="w3-round" style="width:80%">
+                <img src="images/pastorn.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Pastorn</h3>
@@ -134,7 +134,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-row w3-padding-16">
             <div class="w3-third w3-padding-16">
-                <img src="images/maskinen.png" class="w3-round" style="width:80%">
+                <img src="images/maskinen.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Maskinen</h3>
