--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-row w3-padding-16">
             <div class="w3-third w3-padding-16">
-                <img src="images/member.png" class="w3-round" style="width:80%">
+                <img src="images/greven.jpg" class="w3-round" style="width:80%">
             </div>
             <div class="w3-twothirds">
                 <h3 class="mobile-text">Greven</h3>
