First step in remaking website

--- a/crew.html
+++ b/crew.html
@@ -26,9 +26,7 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <a href="./index.html">
-            <img src="logos/logga_with_alpha.png" class="logo"/>
-        </a>
+        <img src="images/logga_with_alpha.png" class="logo"/>
     </div>
     <div class="navbar">
         <a href="./index.html">About</a>
@@ -46,32 +44,26 @@
     </div>
     <!-- Polariod pictures -->
 
-    <div class="content about">
+    <div class="content">
         <h1>
             BRÄRS is ready to bugle.<br/>Are you?
         </h1>
-        <p>
-            Get ready to hear your favorite songs played in the style of a hundred man
-            military brass band on steroids.
-        </p>
-        <p>
-            Inspired by the likes of MEUTE, Lucky Chops,
-            and Uppsala kulturskola, these nine brass musicians are here to bring the new wave
-            of brasspop to Linköping.
+        <p class="text">
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
+            Här är det lite text hejsan svejsan.
         </p>
     </div>
 
-    <footer>
-        <a href="www.google.com">
-            <svg class="svgToWhite" width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg">
-                <image href="./logos/instagram-seeklogo.svg" height="100%" width="100%" />
-            </svg>
-        </a>
-        <div class="contact">
-            <p>Contact info:</p>
-            <p><a href="www.google.com">mail@mailadress.com</a></p>
-            <p>0702778544</p>
-        </div>
+    <footer class="footer">
+        <p>Contact: hejsan</p>
+        <!-- TODO: Lägg till länk till instagram -->
     </footer>
 </body>
 </html>
