Add missing portraits and create member page

--- a/crew.html
+++ b/crew.html
@@ -26,7 +26,9 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <img src="images/logga_with_alpha.png" class="logo"/>
+        <a href="./index.html">
+            <img src="logos/logga_with_alpha.png" class="logo"/>
+        </a>
     </div>
     <div class="navbar">
         <a href="./index.html">About</a>
@@ -35,35 +37,84 @@
     </div>
     <!-- Header -->
 
-    <!-- Polariod pictures -->
-    <div class="album">
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid1; animation-delay: 0.5s"/>
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid2; animation-delay: 0.3s;"/>
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid3; animation-delay: 0.4s;"/>
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid4; animation-delay: 0.6s;"/>
-    </div>
-    <!-- Polariod pictures -->
-
-    <div class="content">
-        <h1>
-            BRÄRS is ready to bugle.<br/>Are you?
+    <div class="content crew">
+        <h1 style="animation: fadeInFromBelow 1s both;">
+            This is the crew
         </h1>
-        <p class="text">
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-            Här är det lite text hejsan svejsan.
-        </p>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.2s;">
+            <img src="images/guvernoren.jpeg" class="portrait"/>
+            <p>
+                This hairy bastard is the group's self-proclaimed, non-official leader with no power.
+                Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.25s;">
+            <img src="images/rodebaronen.jpg" class="portrait"/>
+            <p>
+                This mad dog from the north has been released to feast upon whatever solos he can. Armed with his Martin
+                double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.3s;">
+            <img src="images/majoren.jpg" class="portrait"/>
+            <p>
+                180cm. 80kg. 8cm
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.35s;">
+            <img src="images/doktorn.jpg" class="portrait"/>
+            <p>
+                Holder of the Guiness world record for the brownest tone ever played on a used rectoscope.
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.4s;">
+            <img src="images/kaptenen.jpg" class="portrait"/>
+            <p>
+                Right back from the other side of several of the seven seas, slayer of the Bermuda triangle,
+                bukis with the Kraken. He has one wooden limb, can you guess which?
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.45s;">
+            <img src="images/direktorn.jpg" class="portrait"/>
+            <p>
+                He works with his fingers every day, but never with his hands. As a self proclaimed
+                philantropist he steals from the poor and gives to the rich, oftentimes himself. Wanna smell his glögg?
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.5s;">
+            <img src="images/pastorn.jpg" class="portrait"/>
+            <p>
+                A man of dubious morals. With his sermons he promises the audience salvation.
+                But beware: with the sweet sound from his tenor sax he will lead you to eternal damnation.
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.55s;">
+            <img src="images/greven.jpg" class="portrait"/>
+            <p>
+                You cannot count on this Count being a real cunt, because he cannot count himself.
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.6s;">
+            <img src="images/maskinen.jpg" class="portrait"/>
+            <p>
+                This oil-hungry two-stroke machine drives the bands pace and middle-aged paranoia.
+                If you smell the classic smell of gasoline, you've come to the wrong place,
+                this machine only runs on malt-enriched fluid replacement.
+            </p>
+        </div>
     </div>
 
-    <footer class="footer">
-        <p>Contact: hejsan</p>
-        <!-- TODO: Lägg till länk till instagram -->
+    <footer>
+        <a href="www.google.com">
+            <svg class="svgToWhite" width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg">
+                <image href="./logos/instagram-seeklogo.svg" height="100%" width="100%" />
+            </svg>
+        </a>
+        <div class="contact">
+            <p>Contact info:</p>
+            <p><a href="www.google.com">mail@mailadress.com</a></p>
+            <p>0702778544</p>
+        </div>
     </footer>
 </body>
 </html>
