--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <!-- Polariod pictures -->
     <div class="album">
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid1; animation-delay: 0.5s"/>
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid2; animation-delay: 0.3s;"/>
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid3; animation-delay: 0.4s;"/>
-        <img src="images/guvernoren.jpeg" class="polaroid" style="animation-name: polaroid4; animation-delay: 0.6s;"/>
+        <img src="images/gig2.jpg" class="polaroid" style="animation-name: polaroid1; animation-delay: 0.5s"/>
+        <img src="images/gig3.jpg" class="polaroid" style="animation-name: polaroid2; animation-delay: 0.3s;"/>
+        <img src="images/gig1.jpg" class="polaroid" style="animation-name: polaroid3; animation-delay: 0.4s;"/>
+        <img src="images/gig4.jpg" class="polaroid" style="animation-name: polaroid4; animation-delay: 0.6s;"/>
     </div>
     <!-- Polariod pictures -->
 
