--- a/crew.html
+++ b/crew.html
@@ -3,99 +3,113 @@
 <head>
     <title>BRÄRS</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="brars.css">
-    <link rel="stylesheet" href="polaroidAnimations.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="BRÄRS, music, brass music, brass, party, dance, pop, pop music">
+
+    <!-- Tags for defining which image is shown when page is shared social medias -->
+    <meta property="og:image" content="https://brars.se/logos/logga_with_alpha.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1920">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.brars.se/"/>
+    <meta property="og:title" content="BRÄRS" />
+    <meta property="og:description" content="Get ready to hear your favorite songs played in the style of a hundred man military brass band on steroids." />
+
+    <!-- Local stylesheets -->
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="crew.css">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bungee+Shade&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Monoton&family=Racing+Sans+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Racing+Sans+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
     <div class="header">
         <a href="./index.html">
-            <img src="logos/logga_with_alpha.png" class="logo"/>
+            <img src="logos/logga_with_alpha.png" aria-label="BRÄRS logo" class="logo"/>
         </a>
     </div>
+    <!-- Navbar -->
     <div class="navbar">
         <a href="./index.html">About</a>
         <a href="./crew.html">Crew</a>
         <a href="./media.html">Media</a>
     </div>
-    <!-- Header -->
 
+    <!-- List of crew members -->
     <div class="content crew">
         <h1 style="animation: fadeInFromBelow 1s both;">
-            This is the crew
+            Meet the <span class="brarsYellow">crew</span>
         </h1>
         <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.2s;">
-            <img src="images/guvernoren.jpeg" class="portrait"/>
+            <img src="images/guvernoren.jpeg" alt="Image of Guvernören" class="portrait"/>
+            <h2>Guvernören</h2>
             <p>
                 This hairy bastard is the group's self-proclaimed, non-official leader with no power.
                 Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.
             </p>
         </div>
         <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.25s;">
-            <img src="images/rodebaronen.jpg" class="portrait"/>
+            <img src="images/rodebaronen.jpg" alt="Image of Röde Baronen" class="portrait"/>
+            <h2>Röde Baronen</h2>
             <p>
                 This mad dog from the north has been released to feast upon whatever solos he can. Armed with his Martin
                 double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.
             </p>
         </div>
         <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.3s;">
-            <img src="images/majoren.jpg" class="portrait"/>
+            <img src="images/majoren.jpg" alt="Image of Majoren" class="portrait"/>
+            <h2>Majoren</h2>
             <p>
-                180cm. 80kg. 8cm
+                - 180 cm<br/>
+                - 80 kg<br/>
+                - 8 cm
             </p>
         </div>
         <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.35s;">
-            <img src="images/doktorn.jpg" class="portrait"/>
+            <img src="images/doktorn.jpg" alt="Image of Doktorn" class="portrait"/>
+            <h2>Doktorn</h2>
             <p>
                 Holder of the Guiness world record for the brownest tone ever played on a used rectoscope.
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.4s;">
-            <img src="images/kaptenen.jpg" class="portrait"/>
-            <p>
-                Right back from the other side of several of the seven seas, slayer of the Bermuda triangle,
-                bukis with the Kraken. He has one wooden limb, can you guess which?
-            </p>
-        </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.45s;">
-            <img src="images/direktorn.jpg" class="portrait"/>
-            <p>
-                He works with his fingers every day, but never with his hands. As a self proclaimed
-                philantropist he steals from the poor and gives to the rich, oftentimes himself. Wanna smell his glögg?
-            </p>
-        </div>
         <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.5s;">
-            <img src="images/pastorn.jpg" class="portrait"/>
+            <img src="images/pastorn.jpg" alt="Image of Pastorn" class="portrait"/>
+            <h2>Pastorn</h2>
             <p>
                 A man of dubious morals. With his sermons he promises the audience salvation.
                 But beware: with the sweet sound from his tenor sax he will lead you to eternal damnation.
             </p>
         </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.45s;">
+            <img src="images/direktorn.jpg" alt="Image of Direktörn" class="portrait"/>
+            <h2>Direktörn</h2>
+            <p>
+                He works with his fingers every day, but never with his hands. As a self proclaimed
+                philantropist he steals from the poor and gives to the rich, oftentimes himself. Wanna smell his glögg?
+            </p>
+        </div>
+        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.4s;">
+            <img src="images/kaptenen.jpg" alt="Image of Kaptenen" class="portrait"/>
+            <h2>Kaptenen</h2>
+            <p>
+                Right back from the other side of several of the seven seas, slayer of the Bermuda triangle,
+                bukis with the Kraken. He has one wooden limb, can you guess which?
+            </p>
+        </div>
         <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.55s;">
-            <img src="images/greven.jpg" class="portrait"/>
+            <img src="images/greven.jpg" alt="Image of Greven" class="portrait"/>
+            <h2>Greven</h2>
             <p>
                 You cannot count on this Count being a real cunt, because he cannot count himself.
             </p>
         </div>
         <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.6s;">
-            <img src="images/maskinen.jpg" class="portrait"/>
+            <img src="images/maskinen.jpg" alt="Image of Maskinen" class="portrait"/>
+            <h2>Maskinen</h2>
             <p>
                 This oil-hungry two-stroke machine drives the bands pace and middle-aged paranoia.
                 If you smell the classic smell of gasoline, you've come to the wrong place,
@@ -104,18 +118,27 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
-        <a href="www.google.com">
-            <svg class="svgToWhite" width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg">
-                <image href="./logos/instagram-seeklogo.svg" height="100%" width="100%" />
+        <div class="contact">
+            <a class="contactWay" href="mailto:anton.ig.eriksson@gmail.com">
+                <svg class="svgToWhite" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" aria-label="Mail logo">
+                    <image href="./logos/email.svg" height="100%" width="100%" />
+                </svg>
+                <p>anton.ig.eriksson@gmail.com</p>
+            </a>
+            <a class="contactWay" href="tel:+46736143063">
+                <svg class="svgToWhite" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" aria-label="Phone logo">
+                    <image href="./logos/phone.svg" height="100%" width="100%" />
+                </svg>
+                <p>+46 73 614 30 63</p>
+            </a>
+        </div>
+        <a href="https://www.instagram.com/brars_band?igsh=dDNuOGx2ZTQxcDdh">
+            <svg class="svgToWhite" width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg" aria-label="Instagram logo">
+                <image href="./logos/instagram.svg" height="100%" width="100%" />
             </svg>
         </a>
-        <div class="contact">
-            <p>Contact info:</p>
-            <p><a href="www.google.com">mail@mailadress.com</a></p>
-            <p>0702778544</p>
-        </div>
     </footer>
 </body>
 </html>
-
