--- a/index.html
+++ b/index.html
@@ -3,52 +3,54 @@
 <head>
     <title>BRÄRS</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="brars.css">
-    <link rel="stylesheet" href="polaroidAnimations.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="BRÄRS, music, brass music, brass, party, dance, pop, pop music">
+
+    <!-- Tags for defining which image is shown when page is shared social medias -->
+    <meta property="og:image" content="https://brars.se/logos/logga_with_alpha.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1920">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.brars.se/"/>
+    <meta property="og:title" content="BRÄRS" />
+    <meta property="og:description" content="Get ready to hear your favorite songs played in the style of a hundred man military brass band on steroids." />
+
+    <!-- Local stylesheets -->
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="index.css">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bungee+Shade&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Monoton&family=Racing+Sans+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Racing+Sans+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
     <div class="header">
         <a href="./index.html">
-            <img src="logos/logga_with_alpha.png" class="logo"/>
+            <img src="logos/logga_with_alpha.png" aria-label="BRÄRS logo" class="logo"/>
         </a>
     </div>
+    <!-- Navbar -->
     <div class="navbar">
         <a href="./index.html">About</a>
         <a href="./crew.html">Crew</a>
         <a href="./media.html">Media</a>
     </div>
-    <!-- Header -->
 
     <!-- Polariod pictures -->
     <div class="album">
-        <img src="images/gig2.jpg" class="polaroid" style="animation-name: polaroid1; animation-delay: 0.5s"/>
-        <img src="images/gig3.jpg" class="polaroid" style="animation-name: polaroid2; animation-delay: 0.3s;"/>
-        <img src="images/gig1.jpg" class="polaroid" style="animation-name: polaroid3; animation-delay: 0.4s;"/>
-        <img src="images/gig4.jpg" class="polaroid" style="animation-name: polaroid4; animation-delay: 0.6s;"/>
+        <img src="images/gig2.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid1; animation-delay: 0.5s"/>
+        <img src="images/gig3.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid2; animation-delay: 0.3s;"/>
+        <img src="images/gig1.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid3; animation-delay: 0.4s;"/>
+        <img src="images/gig4.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid4; animation-delay: 0.6s;"/>
     </div>
-    <!-- Polariod pictures -->
 
+    <!-- About BRÄRS -->
     <div class="content about">
         <h1>
-            BRÄRS is ready to bugle.<br/>Are you?
+            BRÄRS is ready to bugle.<br/><span class="brarsYellow">Are you?</span>
         </h1>
         <p>
             Get ready to hear your favorite songs played in the style of a hundred man
@@ -61,17 +63,27 @@
         </p>
     </div>
 
+    <!-- Footer -->
     <footer>
-        <a href="www.google.com">
-            <svg class="svgToWhite" width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg">
-                <image href="./logos/instagram-seeklogo.svg" height="100%" width="100%" />
+        <div class="contact">
+            <a class="contactWay" href="mailto:anton.ig.eriksson@gmail.com">
+                <svg class="svgToWhite" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" aria-label="Mail logo">
+                    <image href="./logos/email.svg" height="100%" width="100%" />
+                </svg>
+                <p>anton.ig.eriksson@gmail.com</p>
+            </a>
+            <a class="contactWay" href="tel:+46736143063">
+                <svg class="svgToWhite" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" aria-label="Phone logo">
+                    <image href="./logos/phone.svg" height="100%" width="100%" />
+                </svg>
+                <p>+46 73 614 30 63</p>
+            </a>
+        </div>
+        <a href="https://www.instagram.com/brars_band?igsh=dDNuOGx2ZTQxcDdh">
+            <svg class="svgToWhite" width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg" aria-label="Instagram logo">
+                <image href="./logos/instagram.svg" height="100%" width="100%" />
             </svg>
         </a>
-        <div class="contact">
-            <p>Contact info:</p>
-            <p><a href="www.google.com">mail@mailadress.com</a></p>
-            <p>0702778544</p>
-        </div>
     </footer>
 </body>
 </html>
